Fix billing cards not wrapping when viewport is narrow

--- a/frontend/src/pages/Billing/Billing.module.scss
+++ b/frontend/src/pages/Billing/Billing.module.scss
@@ -16,9 +16,7 @@
 .billingPlanCardWrapper {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--size-large);
     margin-top: 30px;
-}
-
-.billingPlanCardWrapper > *:not(:first-child) {
-    margin-left: 20px;
 }
